--- a/Контакты.css
+++ b/Контакты.css
@@ -3,12 +3,12 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 100vh;
+  min-height: 751px;
 }
 
 .u-section-1 .u-btn-1 {
   align-self: center;
-  margin: 71px auto 0;
+  margin: 127px auto 0;
   padding: 10px 75px 10px 74px;
 }
 
