--- a/Контакты.css
+++ b/Контакты.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 751px;
+  min-height: 773px;
 }
 
 .u-section-1 .u-btn-1 {
@@ -54,7 +54,7 @@
 
 .u-section-1 .u-btn-8 {
   background-image: none;
-  margin: 12px auto 60px;
+  margin: 12px auto 0;
   padding: 10px 85px;
 }
 
