--- a/Софт-от-Аддерли.css
+++ b/Софт-от-Аддерли.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 735px;
+  min-height: 773px;
 }
 
 .u-section-1 .u-text-1 {
@@ -13,13 +13,13 @@
 
 .u-section-1 .u-btn-1 {
   background-image: none;
-  margin: 50px auto 0 110px;
+  margin: 75px auto 0 110px;
   padding: 10px 92px 10px 91px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
-  margin: -70px 110px 0 auto;
+  margin: -70px auto 0 578px;
   padding: 10px 92px 10px 91px;
 }
 
@@ -140,7 +140,7 @@
 
   .u-section-1 .u-btn-2 {
     margin-top: 20px;
-    margin-right: auto;
+    margin-left: 378px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -222,6 +222,10 @@
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-btn-2 {
+    margin-left: 158px;
+  }
+
   .u-section-1 .u-btn-4 {
     margin-left: auto;
   }
@@ -276,6 +280,10 @@
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
     min-height: 1579px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: 0;
   }
 
   .u-section-1 .u-btn-7 {
@@ -336,8 +344,6 @@
 
   .u-section-1 .u-btn-2 {
     margin-top: 11px;
-    margin-left: 0;
-    margin-right: 0;
     padding-right: 36px;
     padding-left: 35px;
   }
