--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 951px;
+  min-height: 1715px;
 }
 
 .u-section-1 .u-text-1 {
@@ -13,15 +13,15 @@
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 15px auto 0 335px;
-  padding: 10px 45px 10px 43px;
+  margin: 15px auto 0 575px;
+  padding: 10px 36px 10px 35px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 575px;
-  padding: 10px 36px 10px 35px;
+  margin: -45px auto 0 335px;
+  padding: 10px 45px 10px 43px;
 }
 
 .u-section-1 .u-btn-3 {
@@ -55,7 +55,7 @@
 .u-section-1 .u-text-2 {
   font-weight: 700;
   font-size: 1.5rem;
-  margin: 83px 81px 0;
+  margin: 101px 81px 0;
 }
 
 .u-section-1 .u-text-3 {
@@ -74,20 +74,76 @@
 }
 
 .u-section-1 .u-text-6 {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 48px;
   font-size: 1.875rem;
+  margin: 20px auto 0;
+}
+
+.u-section-1 .u-text-7 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 134px auto 0;
+}
+
+.u-section-1 .u-btn-7 {
+  align-self: center;
+  margin: 24px auto 0;
+  padding: 10px 75px 10px 74px;
+}
+
+.u-section-1 .u-btn-8 {
+  align-self: center;
+  margin: 12px auto 0;
+  padding: 10px 69px 10px 67px;
+}
+
+.u-section-1 .u-btn-9 {
+  align-self: center;
+  margin: 12px auto 0;
+  padding: 10px 47px 10px 46px;
+}
+
+.u-section-1 .u-btn-10 {
+  background-image: none;
+  align-self: center;
+  margin: 12px auto 0;
+  padding: 10px 60px;
+}
+
+.u-section-1 .u-btn-11 {
+  background-image: none;
+  align-self: center;
+  margin: 12px auto 0;
+  padding: 10px 50px 10px 48px;
+}
+
+.u-section-1 .u-btn-12 {
+  background-image: none;
+  font-size: 0.875rem;
+  align-self: center;
+  margin: 12px auto 0;
+  padding: 11px 44px 12px 43px;
+}
+
+.u-section-1 .u-btn-13 {
+  align-self: center;
+  margin: 12px auto 0;
+  padding: 10px 95px 10px 94px;
+}
+
+.u-section-1 .u-btn-14 {
+  background-image: none;
+  margin: 12px auto 60px;
+  padding: 10px 58px 10px 56px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-btn-1 {
     margin-top: 17px;
-    margin-left: 233px;
+    margin-left: 478px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 478px;
+    margin-left: 233px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -139,11 +195,11 @@
 
   .u-section-1 .u-btn-1 {
     margin-top: 25px;
-    margin-left: 122px;
+    margin-left: 368px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 368px;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -179,21 +235,21 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1051px;
+    min-height: 1820px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 9px;
-    margin-left: 28px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-top: 63px;
+    margin-top: 117px;
     margin-left: 283px;
   }
 
+  .u-section-1 .u-btn-2 {
+    margin-top: -153px;
+    margin-left: 28px;
+  }
+
   .u-section-1 .u-btn-3 {
-    margin-top: -99px;
+    margin-top: 9px;
     margin-left: 28px;
   }
 
@@ -232,28 +288,37 @@
     margin-right: 9px;
   }
 
-  .u-section-1 .u-text-6 {
-    margin-bottom: 34px;
+  .u-section-1 .u-text-7 {
+    width: auto;
+    margin-top: 71px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-top: 11px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-bottom: 49px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1406px;
+    min-height: 1942px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 32px;
+    margin-top: 307px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 230px;
+    margin-top: -320px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -265px;
+    margin-top: 10px;
     margin-left: auto;
   }
 
@@ -278,13 +343,13 @@
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: -7px;
+    margin-top: 0;
     margin-left: 16px;
     margin-right: 16px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 99px;
+    margin-top: 92px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -295,6 +360,55 @@
   }
 
   .u-section-1 .u-text-6 {
-    margin: 10px 0 48px;
+    margin-top: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 72px;
+    margin-left: -9px;
+    margin-right: -9px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-top: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-left: -1px;
+    margin-right: -1px;
+  }
+
+  .u-section-1 .u-btn-12 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-13 {
+    margin-left: -1px;
+    margin-right: -1px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-left: -1px;
+    margin-right: -1px;
   }
 }
