--- a/Содержимое-сборок.css
+++ b/Содержимое-сборок.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 980px;
+  min-height: 3402px;
 }
 
 .u-section-1 .u-image-1 {
@@ -28,12 +28,111 @@
   margin: -207px 68px 0 auto;
 }
 
-.u-section-1 .u-btn-1 {
-  background-image: none;
-  margin: 166px auto 60px;
+.u-section-1 .u-text-3 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 177px auto 0 291px;
+}
+
+.u-section-1 .u-image-3 {
+  width: 477px;
+  height: 380px;
+  margin: 32px auto 0 53px;
+}
+
+.u-section-1 .u-text-4 {
+  margin: -202px 17px 0 auto;
+}
+
+.u-section-1 .u-text-5 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 218px auto 0 301px;
+}
+
+.u-section-1 .u-image-4 {
+  width: 396px;
+  height: 182px;
+  margin: 39px auto 0 60px;
+}
+
+.u-section-1 .u-text-6 {
+  margin: -103px 48px 0 auto;
+}
+
+.u-section-1 .u-text-7 {
+  margin: 159px auto 0 324px;
+}
+
+.u-section-1 .u-image-5 {
+  width: 396px;
+  height: 805px;
+  margin: 12px auto 0 183px;
+}
+
+.u-section-1 .u-image-6 {
+  width: 396px;
+  height: 805px;
+  margin: -805px auto 0 553px;
+}
+
+.u-section-1 .u-text-8 {
+  margin: 117px auto 0 478px;
+}
+
+.u-section-1 .u-image-7 {
+  width: 408px;
+  height: 351px;
+  margin: 16px auto 0 88px;
+}
+
+.u-section-1 .u-image-8 {
+  width: 302px;
+  height: 80px;
+  margin: -351px auto 0 462px;
+}
+
+.u-section-1 .u-image-9 {
+  width: 625px;
+  height: 66px;
+  margin: -1px auto 0 462px;
+}
+
+.u-section-1 .u-image-10 {
+  width: 624px;
+  height: 66px;
+  margin: -1px auto 0 463px;
+}
+
+.u-section-1 .u-image-11 {
+  width: 625px;
+  height: 55px;
+  margin: -1px auto 0 462px;
+}
+
+.u-section-1 .u-image-12 {
+  width: 243px;
+  height: 126px;
+  margin: -1px auto 0 463px;
+}
+
+.u-section-1 .u-image-13 {
+  width: 249px;
+  height: 203px;
+  margin: -126px auto 0 705px;
+}
+
+.u-section-1 .u-image-14 {
+  width: 270px;
+  height: 189px;
+  margin: -78px auto 40px 463px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 3894px;
+  }
+
   .u-section-1 .u-image-1 {
     height: 367px;
     margin-top: 51px;
@@ -57,17 +156,291 @@
     margin-top: 45px;
     margin-right: auto;
   }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 117px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-top: 0;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 16px;
+    margin-right: auto;
+    margin-left: 206px;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: auto;
+    margin-top: 65px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 5px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: auto;
+    margin-top: 26px;
+    margin-right: auto;
+    margin-left: 195px;
+  }
+
+  .u-section-1 .u-text-7 {
+    width: auto;
+    margin-top: 93px;
+    margin-left: 198px;
+  }
+
+  .u-section-1 .u-image-5 {
+    margin-left: 114px;
+  }
+
+  .u-section-1 .u-image-6 {
+    margin-left: 475px;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-top: 114px;
+    margin-left: 368px;
+  }
+
+  .u-section-1 .u-image-7 {
+    margin-top: 279px;
+    margin-left: 30px;
+  }
+
+  .u-section-1 .u-image-8 {
+    margin-top: -614px;
+    margin-left: 436px;
+  }
+
+  .u-section-1 .u-image-9 {
+    margin-left: 289px;
+  }
+
+  .u-section-1 .u-image-10 {
+    margin-left: 290px;
+  }
+
+  .u-section-1 .u-image-11 {
+    margin-left: 289px;
+  }
+
+  .u-section-1 .u-image-12 {
+    margin-left: 437px;
+  }
+
+  .u-section-1 .u-image-13 {
+    margin-left: 665px;
+  }
+
+  .u-section-1 .u-image-14 {
+    margin-left: 437px;
+  }
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 4021px;
+  }
+
   .u-section-1 .u-text-2 {
     margin-top: 20px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 123px;
+    margin-left: 55px;
+    margin-right: 55px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 13px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-top: 12px;
+    margin-left: 70px;
+    margin-right: 70px;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 13px;
+    margin-left: 59px;
+    margin-right: 59px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 98px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-5 {
+    margin-top: 0;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-image-6 {
+    margin-top: -804px;
+    margin-right: 27px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-top: 188px;
+    margin-left: 276px;
+  }
+
+  .u-section-1 .u-image-7 {
+    margin-top: 280px;
+    margin-left: 16px;
+  }
+
+  .u-section-1 .u-image-8 {
+    margin-top: -615px;
+    margin-left: 392px;
+  }
+
+  .u-section-1 .u-image-9 {
+    margin-left: 69px;
+  }
+
+  .u-section-1 .u-image-10 {
+    margin-left: 70px;
+  }
+
+  .u-section-1 .u-image-11 {
+    margin-left: 69px;
+  }
+
+  .u-section-1 .u-image-13 {
+    width: 270px;
+    margin-right: 27px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-14 {
+    margin: 0 27px 60px auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 4808px;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: 423px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: 407px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: 349px;
+    margin-top: 11px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 100px;
+  }
+
+  .u-section-1 .u-image-5 {
+    width: 225px;
+    height: 458px;
+    margin-top: 832px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-6 {
+    margin-top: -1290px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-8 {
+    width: auto;
+    margin-top: 527px;
+    margin-right: 144px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-7 {
+    margin-top: 212px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-8 {
+    margin-top: 6px;
+    margin-left: 15px;
+  }
+
+  .u-section-1 .u-image-9 {
+    height: 57px;
+    margin-top: -624px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-10 {
+    height: 57px;
+    margin-top: 6px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-11 {
+    height: 48px;
+    margin-top: 7px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-12 {
+    width: 192px;
+    height: 106px;
+    margin-top: 369px;
+    margin-right: 32px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-13 {
+    margin-top: -20px;
+    margin-right: auto;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-image-14 {
+    margin-top: -152px;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1479px;
+    min-height: 4640px;
   }
 
   .u-section-1 .u-image-1 {
@@ -80,8 +453,114 @@
     height: 272px;
   }
 
-  .u-section-1 .u-btn-1 {
-    margin: 169px -4px 57px;
-    padding: 10px 6px;
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 186px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-3 {
+    width: 340px;
+    height: 271px;
+    margin-top: 5px;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-4 {
+    height: 156px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: auto;
+    margin-top: 12px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 99px;
+  }
+
+  .u-section-1 .u-image-5 {
+    height: 457px;
+    margin-top: 714px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-6 {
+    height: 691px;
+    margin-top: -1171px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-top: 491px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-image-7 {
+    height: 292px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-8 {
+    margin-top: 213px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-9 {
+    height: 36px;
+    margin-top: -293px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-10 {
+    height: 36px;
+    margin-top: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-11 {
+    height: 36px;
+    margin-top: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-12 {
+    margin-top: 0;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-image-13 {
+    margin-top: 78px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-14 {
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 42px;
   }
 }
