--- a/Софт-от-Аддерли.css
+++ b/Софт-от-Аддерли.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1202px;
+  min-height: 1451px;
 }
 
 .u-section-1 .u-text-1 {
@@ -13,13 +13,13 @@
 
 .u-section-1 .u-btn-1 {
   background-image: none;
-  margin: 75px auto 0 110px;
+  margin: 75px auto 0 578px;
   padding: 10px 92px 10px 91px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
-  margin: -70px auto 0 578px;
+  margin: -70px auto 0 110px;
   padding: 10px 92px 10px 91px;
 }
 
@@ -126,24 +126,34 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 469px 19px 57px;
+  margin: 321px 0 0;
+}
+
+.u-section-1 .u-text-3 {
+  margin: 396px 19px 19px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1955px;
+  }
+
   .u-section-1 .u-text-1 {
     width: auto;
   }
 
   .u-section-1 .u-btn-1 {
+    margin-top: 165px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 20px;
-    margin-left: 378px;
+    margin-top: -160px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-3 {
+    margin-top: 101px;
     margin-left: auto;
   }
 
@@ -221,14 +231,18 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin: 385px 0 11px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-btn-2 {
-    margin-left: 158px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 2009px;
   }
 
   .u-section-1 .u-btn-4 {
@@ -280,13 +294,18 @@
   .u-section-1 .u-btn-19 {
     margin-left: 416px;
   }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 265px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 333px;
+    margin-bottom: 19px;
+  }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-btn-2 {
-    margin-left: 0;
-  }
-
   .u-section-1 .u-btn-7 {
     margin-left: auto;
   }
@@ -330,19 +349,27 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2448px;
+  }
+
   .u-section-1 .u-text-1 {
     margin-top: 60px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 74px;
-    padding: 19px 35px 20px;
+    margin-top: 174px;
+    padding-right: 36px;
+    padding-left: 35px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 11px;
-    padding-right: 36px;
-    padding-left: 35px;
+    margin-top: -170px;
+    padding: 19px 35px 20px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 92px;
   }
 
   .u-section-1 .u-btn-5 {
@@ -355,5 +382,14 @@
     margin-right: 0;
     padding-right: 63px;
     padding-left: 62px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 289px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 325px;
+    margin-bottom: 16px;
   }
 }
