--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 4724px;
+  min-height: 4849px;
 }
 
 .u-section-1 .u-text-1 {
@@ -39,7 +39,7 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 30px auto 0;
+  margin: 30px -1px 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -107,12 +107,12 @@
 }
 
 .u-section-1 .u-text-7 {
-  margin: 31px auto 0;
+  margin: 30px auto 0 0;
 }
 
 .u-section-1 .u-btn-3 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 30px auto 0;
+  margin: 31px auto 0;
 }
 
 .u-section-1 .u-text-8 {
@@ -226,7 +226,6 @@
 
   .u-section-1 .u-text-7 {
     margin-top: 30px;
-    margin-left: 0;
     margin-right: 0;
   }
 
@@ -326,12 +325,8 @@
     height: 300px;
   }
 
-  .u-section-1 .u-text-7 {
-    margin-top: 31px;
-  }
-
   .u-section-1 .u-btn-3 {
-    margin-top: 30px;
+    margin-top: 31px;
   }
 
   .u-section-1 .u-text-8 {
