--- a/Windows-7-сборки.css
+++ b/Windows-7-сборки.css
@@ -51,7 +51,7 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 44px auto 0;
+  margin: 44px auto 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -140,7 +140,6 @@
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-left: 0;
     margin-right: 0;
   }
 
