--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -39,12 +39,12 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 31px auto 0;
+  margin: 29px auto 0 0;
 }
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 31px auto 0 277px;
+  margin: 33px auto 0 277px;
 }
 
 .u-section-1 .u-btn-2 {
