--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -3,31 +3,31 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1715px;
+  min-height: 1831px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 167px auto 0;
+  margin: 99px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 20px auto 0 581px;
-  padding: 10px 36px 10px 35px;
+  margin: 20px auto 0 330px;
+  padding: 10px 45px 10px 43px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 330px;
-  padding: 10px 45px 10px 43px;
+  margin: -45px auto 0 581px;
+  padding: 10px 36px 10px 35px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 331px;
+  margin: 9px auto 0 330px;
   padding: 10px 37px 10px 36px;
 }
 
@@ -41,7 +41,7 @@
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 331px;
+  margin: 9px auto 0 330px;
   padding: 10px 39px 10px 38px;
 }
 
@@ -53,70 +53,76 @@
 }
 
 .u-section-1 .u-text-2 {
+  font-size: 3rem;
   font-weight: 700;
-  font-size: 1.5rem;
-  margin: 96px 81px 0;
+  margin: 56px auto 0;
+}
+
+.u-section-1 .u-btn-7 {
+  margin: 0 auto;
+  padding: 17px 48px 18px 47px;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 0 auto;
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 143px 81px 0;
 }
 
 .u-section-1 .u-text-4 {
+  margin: 0 auto;
+}
+
+.u-section-1 .u-text-5 {
   font-size: 3rem;
   font-weight: 700;
   margin: 88px auto 0;
 }
 
-.u-section-1 .u-text-5 {
-  font-size: 1.25rem;
+.u-section-1 .u-text-6 {
+  font-size: 1.875rem;
   margin: 0 auto;
 }
 
-.u-section-1 .u-text-6 {
-  font-size: 1.875rem;
-  margin: 20px auto 0;
-}
-
 .u-section-1 .u-text-7 {
-  font-size: 3rem;
+  font-size: 2.25rem;
   font-weight: 700;
-  margin: 145px auto 0;
+  margin: 159px auto 0;
 }
 
-.u-section-1 .u-btn-7 {
+.u-section-1 .u-btn-8 {
   align-self: center;
   margin: 24px auto 0;
   padding: 10px 75px 10px 74px;
 }
 
-.u-section-1 .u-btn-8 {
+.u-section-1 .u-btn-9 {
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 69px 10px 67px;
 }
 
-.u-section-1 .u-btn-9 {
+.u-section-1 .u-btn-10 {
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 47px 10px 46px;
-}
-
-.u-section-1 .u-btn-10 {
-  background-image: none;
-  align-self: center;
-  margin: 12px auto 0;
-  padding: 10px 60px;
 }
 
 .u-section-1 .u-btn-11 {
   background-image: none;
   align-self: center;
   margin: 12px auto 0;
-  padding: 10px 50px 10px 48px;
+  padding: 10px 60px;
 }
 
 .u-section-1 .u-btn-12 {
+  background-image: none;
+  align-self: center;
+  margin: 12px auto 0;
+  padding: 10px 50px 10px 48px;
+}
+
+.u-section-1 .u-btn-13 {
   background-image: none;
   font-size: 0.875rem;
   align-self: center;
@@ -124,30 +130,26 @@
   padding: 11px 44px 12px 43px;
 }
 
-.u-section-1 .u-btn-13 {
+.u-section-1 .u-btn-14 {
   align-self: center;
   margin: 12px auto 0;
   padding: 10px 95px 10px 94px;
 }
 
-.u-section-1 .u-btn-14 {
+.u-section-1 .u-btn-15 {
   background-image: none;
   margin: 12px auto 60px;
   padding: 10px 58px 10px 56px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1574px;
-  }
-
   .u-section-1 .u-btn-1 {
     margin-top: 22px;
-    margin-left: 479px;
+    margin-left: 231px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 231px;
+    margin-left: 479px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -168,25 +170,33 @@
 
   .u-section-1 .u-text-2 {
     width: auto;
-    margin-top: 40px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
+    margin-top: 266px;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: 63px;
   }
 
   .u-section-1 .u-text-5 {
     width: auto;
+    margin-top: 63px;
   }
 
   .u-section-1 .u-text-6 {
     width: auto;
-    margin-top: 0;
+  }
+
+  .u-section-1 .u-text-7 {
+    width: auto;
+    margin-top: 152px;
+  }
+
+  .u-section-1 .u-btn-15 {
+    margin-bottom: 43px;
   }
 }
 
@@ -199,11 +209,11 @@
 
   .u-section-1 .u-btn-1 {
     margin-top: 25px;
-    margin-left: 368px;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 122px;
+    margin-left: 368px;
   }
 
   .u-section-1 .u-btn-3 {
@@ -225,35 +235,38 @@
   }
 
   .u-section-1 .u-text-2 {
+    margin-top: 129px;
+  }
+
+  .u-section-1 .u-text-3 {
     width: 558px;
-    margin-top: 119px;
+    margin-top: 178px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-1 .u-text-5 {
-    margin-left: 6px;
-    margin-right: 6px;
+  .u-section-1 .u-text-7 {
+    margin-top: 99px;
+  }
+
+  .u-section-1 .u-btn-15 {
+    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1820px;
-  }
-
   .u-section-1 .u-btn-1 {
-    margin-top: 117px;
-    margin-left: 283px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-top: -153px;
+    margin-top: 9px;
     margin-left: 28px;
   }
 
+  .u-section-1 .u-btn-2 {
+    margin-top: 63px;
+    margin-left: 283px;
+  }
+
   .u-section-1 .u-btn-3 {
-    margin-top: 9px;
+    margin-top: -99px;
     margin-left: 28px;
   }
 
@@ -273,56 +286,44 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: 378px;
-    margin-top: 134px;
+    margin-top: 99px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 19px;
+    width: 378px;
+    margin-top: 210px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 106px;
-    margin-left: 35px;
-    margin-right: 35px;
+    margin-top: 19px;
   }
 
   .u-section-1 .u-text-5 {
-    margin-left: 9px;
-    margin-right: 9px;
+    margin-top: 106px;
   }
 
   .u-section-1 .u-text-7 {
-    width: auto;
-    margin-top: 71px;
+    margin-top: 90px;
   }
 
-  .u-section-1 .u-btn-7 {
+  .u-section-1 .u-btn-8 {
     margin-top: 11px;
-  }
-
-  .u-section-1 .u-btn-14 {
-    margin-bottom: 49px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1942px;
-  }
-
   .u-section-1 .u-btn-1 {
-    margin-top: 307px;
+    margin-top: 32px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: -320px;
+    margin-top: 230px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: 10px;
+    margin-top: -265px;
     margin-left: auto;
   }
 
@@ -342,46 +343,42 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: 340px;
-    margin-top: 92px;
+    margin-top: 126px;
   }
 
   .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 86px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-4 {
     margin-top: 0;
     margin-left: 16px;
     margin-right: 16px;
   }
 
-  .u-section-1 .u-text-4 {
-    margin-top: 92px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
   .u-section-1 .u-text-5 {
+    margin-top: 50px;
+    margin-right: -9px;
     margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-text-6 {
-    margin-top: 10px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 7px;
+    margin-right: 7px;
   }
 
   .u-section-1 .u-text-7 {
-    margin-top: 61px;
-    margin-left: -9px;
-    margin-right: -9px;
-  }
-
-  .u-section-1 .u-btn-7 {
-    margin-top: 10px;
-    margin-left: 0;
-    margin-right: 0;
+    font-size: 3rem;
+    margin-top: 32px;
+    margin-right: -10px;
+    margin-left: -6px;
   }
 
   .u-section-1 .u-btn-8 {
+    margin-top: 13px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -397,23 +394,28 @@
   }
 
   .u-section-1 .u-btn-11 {
-    margin-left: -1px;
-    margin-right: -1px;
-  }
-
-  .u-section-1 .u-btn-12 {
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-13 {
+  .u-section-1 .u-btn-12 {
     margin-left: -1px;
     margin-right: -1px;
   }
 
+  .u-section-1 .u-btn-13 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   .u-section-1 .u-btn-14 {
-    margin-left: -2px;
-    margin-right: -2px;
-    margin-bottom: 60px;
+    margin-left: -1px;
+    margin-right: -1px;
+  }
+
+  .u-section-1 .u-btn-15 {
+    margin-left: -1px;
+    margin-right: -1px;
+    margin-bottom: 51px;
   }
 }
