--- a/Windows-8-0-сборки.css
+++ b/Windows-8-0-сборки.css
@@ -17,19 +17,19 @@
 .u-section-1 .u-image-1 {
   width: 559px;
   height: 314px;
-  margin: 22px auto 0 0;
+  margin: 20px auto 0 0;
 }
 
 .u-section-1 .u-image-2 {
   width: 559px;
   height: 314px;
-  margin: -314px 0 0 auto;
+  margin: -314px auto 0 581px;
 }
 
 .u-section-1 .u-image-3 {
   width: 559px;
   height: 314px;
-  margin: 15px 0 0 auto;
+  margin: 15px auto 0 581px;
 }
 
 .u-section-1 .u-image-4 {
@@ -47,7 +47,7 @@
 .u-section-1 .u-image-6 {
   width: 559px;
   height: 314px;
-  margin: -314px 0 0 auto;
+  margin: -314px auto 0 581px;
 }
 
 .u-section-1 .u-text-3 {
@@ -56,7 +56,7 @@
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 30px auto 0 279px;
+  margin: 36px auto 0 279px;
 }
 
 .u-section-1 .u-btn-2 {
@@ -65,7 +65,7 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 113px auto 0;
+  margin: 109px auto 0;
 }
 
 .u-section-1 .u-btn-3 {
@@ -93,11 +93,11 @@
 
   .u-section-1 .u-image-2 {
     margin-top: 20px;
-    margin-right: auto;
+    margin-left: 381px;
   }
 
   .u-section-1 .u-image-3 {
-    margin-right: auto;
+    margin-left: 381px;
   }
 
   .u-section-1 .u-image-4 {
@@ -111,7 +111,7 @@
 
   .u-section-1 .u-image-6 {
     margin-top: 20px;
-    margin-right: auto;
+    margin-left: 381px;
   }
 
   .u-section-1 .u-text-3 {
@@ -132,6 +132,18 @@
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
     min-height: 3256px;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-left: 161px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-left: 161px;
+  }
+
+  .u-section-1 .u-image-6 {
+    margin-left: 161px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -160,11 +172,13 @@
   .u-section-1 .u-image-2 {
     width: 540px;
     height: 304px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-image-3 {
     width: 540px;
     height: 303px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-image-4 {
@@ -180,6 +194,7 @@
   .u-section-1 .u-image-6 {
     width: 540px;
     height: 304px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-text-3 {
