--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -55,7 +55,7 @@
 .u-section-1 .u-text-2 {
   font-size: 3rem;
   font-weight: 700;
-  margin: 56px auto 0;
+  margin: 68px auto 0;
 }
 
 .u-section-1 .u-btn-7 {
@@ -66,7 +66,7 @@
 .u-section-1 .u-text-3 {
   font-weight: 700;
   font-size: 1.5rem;
-  margin: 143px 81px 0;
+  margin: 141px 81px 0;
 }
 
 .u-section-1 .u-text-4 {
@@ -76,7 +76,7 @@
 .u-section-1 .u-text-5 {
   font-size: 3rem;
   font-weight: 700;
-  margin: 88px auto 0;
+  margin: 84px auto 0;
 }
 
 .u-section-1 .u-text-6 {
@@ -87,12 +87,12 @@
 .u-section-1 .u-text-7 {
   font-size: 2.25rem;
   font-weight: 700;
-  margin: 159px auto 0;
+  margin: 177px auto 0;
 }
 
 .u-section-1 .u-btn-8 {
   align-self: center;
-  margin: 24px auto 0;
+  margin: 0 auto;
   padding: 10px 75px 10px 74px;
 }
 
