--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -3,70 +3,70 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1831px;
+  min-height: 1510px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 99px auto 0;
+  margin: 94px auto 0 35px;
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 20px auto 0 330px;
+  margin: 20px auto 0 131px;
   padding: 10px 45px 10px 43px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 581px;
+  margin: -45px auto 0 382px;
   padding: 10px 36px 10px 35px;
+}
+
+.u-section-1 .u-text-2 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: -37px 120px 0 auto;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 330px;
+  margin: -30px auto 0 382px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 581px;
+  margin: -45px auto 0 131px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-5 {
-  background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 330px;
-  padding: 10px 39px 10px 38px;
+  margin: -15px 94px 0 auto;
+  padding: 17px 48px 18px 47px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 581px;
+  margin: -37px auto 0 131px;
   padding: 10px 39px 10px 38px;
 }
 
-.u-section-1 .u-text-2 {
-  font-size: 3rem;
-  font-weight: 700;
-  margin: 68px auto 0;
-}
-
 .u-section-1 .u-btn-7 {
-  margin: 0 auto;
-  padding: 17px 48px 18px 47px;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0 382px;
+  padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 700;
   font-size: 1.5rem;
-  margin: 141px 81px 0;
+  margin: 66px 81px 0;
 }
 
 .u-section-1 .u-text-4 {
@@ -76,7 +76,7 @@
 .u-section-1 .u-text-5 {
   font-size: 3rem;
   font-weight: 700;
-  margin: 84px auto 0;
+  margin: 66px auto 0;
 }
 
 .u-section-1 .u-text-6 {
@@ -87,7 +87,7 @@
 .u-section-1 .u-text-7 {
   font-size: 2.25rem;
   font-weight: 700;
-  margin: 177px auto 0;
+  margin: 256px auto 0;
 }
 
 .u-section-1 .u-btn-8 {
@@ -138,11 +138,15 @@
 
 .u-section-1 .u-btn-15 {
   background-image: none;
-  margin: 12px auto 60px;
+  margin: 12px auto 57px;
   padding: 10px 58px 10px 56px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1597px;
+  }
+
   .u-section-1 .u-btn-1 {
     margin-top: 22px;
     margin-left: 231px;
@@ -152,29 +156,38 @@
     margin-left: 479px;
   }
 
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 138px;
+    margin-right: auto;
+  }
+
   .u-section-1 .u-btn-3 {
-    margin-left: 231px;
+    margin-top: -205px;
+    margin-left: 479px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 479px;
-  }
-
-  .u-section-1 .u-btn-5 {
     margin-left: 231px;
   }
 
-  .u-section-1 .u-btn-6 {
-    margin-left: 479px;
+  .u-section-1 .u-btn-5 {
+    margin-top: 160px;
+    margin-right: auto;
   }
 
-  .u-section-1 .u-text-2 {
-    width: auto;
+  .u-section-1 .u-btn-6 {
+    margin-top: -211px;
+    margin-left: 231px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-left: 479px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: 266px;
+    margin-top: 258px;
   }
 
   .u-section-1 .u-text-4 {
@@ -194,10 +207,6 @@
     width: auto;
     margin-top: 152px;
   }
-
-  .u-section-1 .u-btn-15 {
-    margin-bottom: 43px;
-  }
 }
 
 @media (max-width: 991px) {
@@ -216,41 +225,41 @@
     margin-left: 368px;
   }
 
+  .u-section-1 .u-text-2 {
+    margin-top: 241px;
+  }
+
   .u-section-1 .u-btn-3 {
-    margin-top: 11px;
-    margin-left: 123px;
+    margin-top: -306px;
+    margin-left: 368px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 368px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: 11px;
     margin-left: 123px;
   }
 
-  .u-section-1 .u-btn-6 {
-    margin-left: 368px;
+  .u-section-1 .u-btn-5 {
+    margin-top: 261px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 129px;
+  .u-section-1 .u-btn-6 {
+    margin-top: -310px;
+    margin-left: 123px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-left: 368px;
   }
 
   .u-section-1 .u-text-3 {
     width: 558px;
-    margin-top: 178px;
+    margin-top: 443px;
     margin-left: auto;
     margin-right: auto;
   }
 
   .u-section-1 .u-text-7 {
     margin-top: 99px;
-  }
-
-  .u-section-1 .u-btn-15 {
-    margin-bottom: 60px;
   }
 }
 
@@ -265,33 +274,37 @@
     margin-left: 283px;
   }
 
+  .u-section-1 .u-text-2 {
+    margin-top: 45px;
+  }
+
   .u-section-1 .u-btn-3 {
-    margin-top: -99px;
-    margin-left: 28px;
+    margin-top: -274px;
+    margin-left: 283px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -99px;
-    margin-left: 283px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: 63px;
+    margin-top: 9px;
     margin-left: 28px;
   }
 
-  .u-section-1 .u-btn-6 {
-    margin-top: -99px;
-    margin-left: 283px;
+  .u-section-1 .u-btn-5 {
+    margin-top: 175px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 99px;
+  .u-section-1 .u-btn-6 {
+    margin-top: -226px;
+    margin-left: 28px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-top: -99px;
+    margin-left: 283px;
   }
 
   .u-section-1 .u-text-3 {
     width: 378px;
-    margin-top: 210px;
+    margin-top: 445px;
   }
 
   .u-section-1 .u-text-4 {
@@ -322,33 +335,37 @@
     margin-left: auto;
   }
 
+  .u-section-1 .u-text-2 {
+    margin-top: 71px;
+  }
+
   .u-section-1 .u-btn-3 {
-    margin-top: -265px;
+    margin-top: -357px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: 10px;
+    margin-top: -100px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 10px;
-    margin-left: auto;
+    margin-top: 367px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: 10px;
+    margin-top: -362px;
     margin-left: auto;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 126px;
+  .u-section-1 .u-btn-7 {
+    margin-top: 10px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: 86px;
+    margin-top: 348px;
     margin-left: 0;
     margin-right: 0;
   }
