--- a/Windows-11-сборки.css
+++ b/Windows-11-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1802px;
+  min-height: 2467px;
 }
 
 .u-section-1 .u-text-1 {
@@ -11,31 +11,56 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 228px auto 0;
+  margin: 168px auto 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 1181px auto 0;
+  margin: 90px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
-  margin: 0 auto;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 17px auto 0;
+}
+
+.u-section-1 .u-text-4 {
+  margin: 1022px auto 0;
 }
 
 .u-section-1 .u-btn-2 {
-  margin: 11px auto 0;
-  padding: 10px 29px 10px 28px;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 0 auto;
+  padding: 10px 32px;
 }
 
 .u-section-1 .u-btn-3 {
-  margin: 11px auto 25px;
-  padding: 10px 35px;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 6px auto 0;
+  padding: 10px 30px;
+}
+
+.u-section-1 .u-btn-4 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 6px auto 17px;
+  padding: 10px 37px;
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-text-1 {
     margin-left: 44px;
     margin-right: 44px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 350px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 20px;
   }
 }
 
