--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -57,17 +57,24 @@
 }
 
 .u-section-1 .u-btn-3 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto;
+  padding: 10px 32px;
 }
 
 .u-section-1 .u-btn-4 {
-  margin: 11px auto 0;
-  padding: 10px 29px 10px 28px;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 6px auto 0;
+  padding: 10px 30px;
 }
 
 .u-section-1 .u-btn-5 {
-  margin: 11px auto 29px;
-  padding: 10px 35px;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 6px auto 29px;
+  padding: 10px 37px;
 }
 
 @media (max-width: 1199px) {
@@ -127,14 +134,13 @@
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 6px;
     margin-bottom: 20px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2527px;
+    min-height: 2847px;
   }
 
   .u-section-1 .u-text-1 {
@@ -174,13 +180,8 @@
     margin-top: 16px;
   }
 
-  .u-section-1 .u-btn-4 {
-    margin-top: 9px;
-  }
-
   .u-section-1 .u-btn-5 {
-    margin-top: 11px;
-    margin-bottom: 16px;
+    margin-bottom: 19px;
   }
 }
 
@@ -215,12 +216,7 @@
     height: 195px;
   }
 
-  .u-section-1 .u-btn-4 {
-    margin-top: 6px;
-  }
-
   .u-section-1 .u-btn-5 {
-    margin-top: 6px;
     margin-bottom: 18px;
   }
 }
